--- a/review/pom.xml
+++ b/review/pom.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dysjsjy</groupId>
+        <artifactId>java-test</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-
-    <groupId>com.dysjsjy</groupId>
-    <artifactId>java-test</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>review</module>
-        <module>main</module>
-    </modules>
+    <artifactId>review</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -20,4 +17,5 @@
         <jdk.version>17</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 </project>
